feat: Add favicon and link to main script
Adds a favicon to the Yikes creator profile page and links the main TypeScript module script to the HTML. This improves brand recognition and ensures the application logic is correctly loaded.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yikes | Xander Keller</title>
+    <link rel="icon" type="image/jpeg" href="https://i.ibb.co/vC3kSCNt/IMG-4174.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -91,5 +92,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
