feat: Add Mop Dictionary and Liquid Glass blur
Introduces a new "Mop Dictionary" section to the website, defining creator-specific slang and terms. This includes updates to the `types.ts` and `constants.ts` files to accommodate the new data structure and content.

Additionally, a CSS class `.backdrop-blur-xl` has been added to `index.html` to enable Liquid Glass blur effects, enhancing the visual presentation. The `App.tsx` component has been updated to include the new Navbar and MopDictionary sections, and the videos section now has scroll-spy functionality.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
           -ms-overflow-style: none;
           scrollbar-width: none;
       }
+
+      /* Liquid Glass Utility for Safari/Cross-Browser */
+      .backdrop-blur-xl {
+        -webkit-backdrop-filter: blur(24px);
+        backdrop-filter: blur(24px);
+      }
     </style>
   <script type="importmap">
 {
